CheckMATE - Changelog

2020-06-08   Mangesh Sonawane <son.arnav95@gmail.com>

    ~ added analyses cms_1409_4789 (CMS 8 TeV displaced e-mu), cms_pas_exo_16_022 (CMS 13 TeV displaced e-mu) and atlas_1710_04901 (ATLAS 13 TeV Displaced Vertex + MET)


2020-04-08   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ removed python Root check due to a change in naming conventions (python->pyroot) around v6.20 


Ver 2.0.26
---------
        
2018-04-16   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ fixed center-of-mass energy setting and unifying lepton isolation

Ver 2.0.25
---------

2018-04-16   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
    ~ added atlas_1804_03602



	
Ver 2.0.24
---------
        
2018-03-28   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ added atlas_1706_03731

Ver 2.0.23
---------
        
2018-03-28   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
    ~ fixed missing files in atlas_1507_05493  

	
Ver 2.0.23
---------
        
2018-03-21   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
    ~ fixed tools/analysis/Makefile.am  

	
Ver 2.0.22
---------
	
2018-03-21   Jong Soo Kim <jsk@th.physik.uni-bonn.de>

    ~ added atlas_conf_2016_066 (GMSB search)

	
Ver 2.0.21
---------

2018-03-16   Krzysztof Rolbiecki <krolb@fuw.edu.pl>


    ~ fixed bug in atlas_1712_08119

	
Ver 2.0.20
---------

2018-03-12   Jong Soo Kim <jsk@th.physik.uni-bonn.de>

    ~ added cms_sus_16_048


	
Ver 2.0.20
---------

2018-03-12   Jong Soo Kim <jsk@th.physik.uni-bonn.de>

    ~ added cms_sus_16_025


Ver 2.0.19
---------

2018-03-12   Jong Soo Kim <jsk@th.physik.uni-bonn.de>

    ~ added cms_sus_16_039


Ver 2.0.18
---------

2018-03-08   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ added atlas_1708_07875 (EW SUSY, taus)
    ~ added atlas_1802_03158 (GMSB photons)
    ~ new JES function for ATLAS 13

Ver 2.0.17
---------

2018-02-14   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ added atlas_1712_02332 (jets+MET, gluinos, squarks)