@@ -1,0 +1,99 @@
+{
+  "analysis": "atlas_2003_11956", 
+  "author": "K. Rolbiecki", 
+  "authoremail": "krolb@fuw.edu.pl", 
+  "cr": "n", 
+  "ecm": "13.0", 
+  "electron_iso_absorrel": [
+    "r"
+  ], 
+  "electron_iso_dR": [
+    "0.2"
+  ], 
+  "electron_iso_ptmin": [
+    "0.1"
+  ], 
+  "electron_iso_ptratiomax": [
+    "0.2"
+  ], 
+  "electron_iso_source": [
+    "c"
+  ], 
+  "electron_niso": 1, 
+  "expectation_known": "y", 
+  "experiment": "atlas13tev", 
+  "info_set": [
+    "obs", 
+    "bkg_err_stat", 
+    "bkg_err_sys", 
+    "bkg", 
+    "S95_obs", 
+    "S95_exp"
+  ], 
+  "jets_btagging": "n", 
+  "jets_tautagging": "n", 
+  "long_info": [
+    "search for long-lived particles decaying into hadrons and at least one displaced muon, long lived top-squarks, R-parity violation"
+  ], 
+  "lumi": "136.0", 
+  "muon_iso_absorrel": [
+    "r"
+  ], 
+  "muon_iso_dR": [
+    "0.05"
+  ], 
+  "muon_iso_ptmin": [
+    "0.5"
+  ], 
+  "muon_iso_ptratiomax": [
+    "0.2"
+  ], 
+  "muon_iso_source": [
+    "t"
+  ], 
+  "muon_niso": 1, 
+  "photon_iso_absorrel": [
+    "r"
+  ], 
+  "photon_iso_dR": [
+    "0.2"
+  ], 
+  "photon_iso_ptmin": [
+    "0.1"
+  ], 
+  "photon_iso_ptratiomax": [
+    "0.2"
+  ], 
+  "photon_iso_source": [
+    "c"
+  ], 
+  "photon_niso": 1, 
+  "reference_data": {
+    "MET": {
+      "S95_exp": "2.91", 
+      "S95_obs": "2.99", 
+      "bkg": "0.43", 
+      "bkg_err_stat": "0.16", 
+      "bkg_err_sys": "0.16", 
+      "obs": "0"
+    }, 
+    "Muon": {
+      "S95_exp": "4.08", 
+      "S95_obs": "3.77", 
+      "bkg": "1.88", 
+      "bkg_err_stat": "0.20", 
+      "bkg_err_sys": "0.28", 
+      "obs": "1"
+    }
+  }, 
+  "short_info": "long-lived particles decaying into hadrons and muon", 
+  "signal_regions": [
+    "MET", 
+    "Muon"
+  ], 
+  "tags": [
+    "displaced vertex", 
+    "R-hadrons", 
+    "stops"
+  ]
+}
