@@ -1,4 +1,5 @@
 #Name                NSR  Description                                                                                 Lumi  CR?  
+
 atlas_1604_01306     1    photon + MET search at 13 TeV                                                               3.2   no   
 atlas_1605_09318     8    >= 3 b-jets + 0-1 lepton + Etmiss                                                           3.3   no   
 atlas_1609_01599     9    ttV cross section measurement at 13 TeV                                                     3.2   no   
@@ -22,6 +23,7 @@ atlas_1908_08215     16   charginos/sleptons, 2 leptons + MET                   
 atlas_1909_08457     5    search for squarks and gluinos with same-sign leptons                                       139   no
 atlas_conf_2019_040  70   search for squarks and gluinos in MET_jet final states                                      139   no
 atlas_1710_04901     1    search for displced vertex                                                                  32.8  no 
+atlas_2003_11956     2    search for long-lived particles decaying into hadrons and at least one displaced muon       136   no
 
 #Superseded:
 #atlas_1602_09058     4    2 ss leptons or 3 leptons                                                                   3.2   no   
