@@ -127,8 +127,10 @@ libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1908_08215.h src/an
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1909_08457.h src/analyses/ATLAS_13TeV/atlas_1909_08457.cc
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_conf_2019_040.h src/analyses/ATLAS_13TeV/atlas_conf_2019_040.cc
 libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_1710_04901.h src/analyses/ATLAS_13TeV/atlas_1710_04901.cc
+libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_2003_11956.h src/analyses/ATLAS_13TeV/atlas_2003_11956.cc
 libanalyses_la_SOURCES += include/analyses/CMS_13TeV/cms_pas_exo_16_022.h src/analyses/CMS_13TeV/cms_pas_exo_16_022.cc
 libanalyses_la_SOURCES += include/analyses/CMS_8TeV/cms_1409_4789.h src/analyses/CMS_8TeV/cms_1409_4789.cc
+libanalyses_la_SOURCES += include/analyses/ATLAS_13TeV/atlas_conf_2019_018.h src/analyses/ATLAS_13TeV/atlas_conf_2019_018.cc
 #@@extraanalysis@@
 
 libanalyses_la_LDFLAGS = -avoid-version -shared
