@@ -39,6 +39,8 @@
 #include "atlas_1909_08457.h"
 #include "atlas_conf_2019_040.h"
 #include "atlas_1710_04901.h"
+#include "atlas_2003_11956.h"
+#include "atlas_conf_2019_018.h"
 //@extraheader@
 #include "AnalysisBase.h"
 
