@@ -93,6 +93,10 @@ void AnalysisHandlerATLAS_13TeV::bookAnalysis(std::string analysisName,
         a = new Atlas_conf_2019_040();
     else if(analysisName == "atlas_1710_04901")
         a = new Atlas_1710_04901();
+    else if(analysisName == "atlas_2003_11956")
+        a = new Atlas_2003_11956();
+    else if(analysisName == "atlas_conf_2019_018")
+        a = new Atlas_conf_2019_018();
     else //@@extracode@@
         Global::abort(name,
                       "Cannot load analysis "+analysisName+
